--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "NEBULA-MD",
-  "version": "5.0.0",
+  "version": "1.0.0",
   "description": "A WhatsApp Bot Created By Ridz Coder",
   "main": "index.js",
   "engines": {
-    "node": ">=20.0.0",
-    "npm": ">=10.0.0"
+    "node": ">=20.x",
+    "npm": ">=10.x"
   },
   "scripts": {
     "start": "pm2 start index.js --deep-monitoring --attach --name NEBULA-MD",
@@ -15,37 +15,40 @@
   "dependencies": {
     "@whiskeysockets/baileys": "github:EdderBot02/bail",
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@dark-yasiya/yt-dl.js": "^1.0.5",
+    "@dark-yasiya/yt-dl.js": "1.0.5",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@vitalets/google-translate-api": "^9.2.1",
-    "axios": "^1.7.9",
-    "better-sqlite3": "npm:libsql@0.5.12",
-    "buffer": "^6.0.3",
-    "cheerio": "^1.0.0-rc.12",
-    "dotenv": "^16.0.3",
-    "express": "^5.1.0",
-    "ffmpeg-static": "^5.1.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^4.0.3",
-    "fs-extra": "^11.1.1",
-    "google-tts-api": "^2.0.2",
-    "jimp": "^0.16.1",
-    "moment-timezone": "^0.6.0",
-    "megajs": "^1.3.7",
-    "mongodb": "^6.4.0",
-    "mongoose": "^8.0.35",
-    "node-fetch": "^3.3.2",
+    "@vitalets/google-translate-api": "^9.2.1",    
     "pino": "^9.7.0",
     "pm2": "^6.0.8",
-    "qrcode-terminal": "^0.12.0",
-    "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7",
-    "wa-sticker-formatter": "^4.4.4",
-    "wa_set_pkg": "^1.0.5",
-    "yt-search": "^2.13.1",
-    "file-type": "^21.2.0",
-    "file_size_url": "^1.0.6",
     "util": "^0.12.5",
-    "adm-zip": "^0.5.16"
+    "express": "^5.1.0",
+    "buffer": "^6.0.3",
+    "moment-timezone": "^0.6.0",
+    "axios": "^1.7.9",
+    "file_size_url": "1.0.6",
+    "fs-extra": "^11.1.0",
+    "fs": "^0.0.1-security",
+    "ffmpeg": "^0.0.4",
+    "file-type": "^21.0.0",
+    "better-sqlite3": "npm:libsql@0.5.12",
+    "fluent-ffmpeg": "^2.1.2",
+    "form-data": "^4.0.3",
+    "google-tts-api": "^2.0.2",
+    "mongodb": "^6.4.0",
+    "node-fetch": "^2.6.1",
+    "megajs": "^1.3.7",
+    "wa_set_pkg": "1.0.5",
+    "wa-sticker-formatter": "^4.4.4",
+    "path": "^0.12.7",
+    "dotenv": "^16.0.0",
+    "mongoose": "^8.0.0",
+    "jimp": "^0.16.1",
+    "adm-zip": "^0.5.16",
+    "cheerio": "^1.0.0-rc.12",
+    "qrcode-terminal": "^0.12.0",
+    "yt-search":"2.13.1",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   }
 }
+
