--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "restart": "pm2 restart NEBULA-MD"
   },
   "dependencies": {
+"@dark-yasiya/yt-dl.js": "latest"
    "@whiskeysockets/baileys": "npm:baileys-pro@latest",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@dark-yasiya/yt-dl.js": "1.0.5",
